2013-07-16 Federico Bernardin <federico@bernardin.it>
    * Fixed bug when user change his profile (bug on forge #48682)

2013-07-16 Federico Bernardin <federico@bernardin.it>
    * Updated function library for 6.1 compatibility (versionNumber)

2013-07-16 Federico Bernardin <federico@bernardin.it>
    * Fixed bug on auto password generation (#55061 in forge)

2013-06-15 Federico Bernardin <federico@bernardin.it>
    * Changed time in uniqid because it could not be unique.

2013-04-19 Federico Bernardin <federico@bernardin.it>
    * Added new feature to redirect user after confirmation only if parameters exists. Added description on the doc
    * update redirect: if at least one redirect params is passed or is set extra.saveParamsFromUrlWithoutParams the system redirect
    * update manual

2013-03-15 Federico Bernardin <federico@bernardin.it>
    * Fixed bug when pre usergroup is empty (update confirmed user not work)

2013-03-15 Federico Bernardin <federico@bernardin.it>
    * Fixed bug using TCA field in preview step

2013-02-09 Federico Bernardin <federico@bernardin.it>
    * Fixed bug when only 1 usergroup is in preusergroup and postusergroup

2013-01-29 Federico Bernardin <federico@bernardin.it>
    * Fixed bug into send confirmation email again

2013-01-23 Federico Bernardin <federico@bernardin.it>
    * Added two new hooks: prepareAndSendEmail, beforeSendingEmail
    * Added regexp rule to flexform rules list

2013-01-15 Federico Bernardin <federico@bernardin.it>
    * Fixed bug with regexp
    * Added regexp rule to flexform rules list

2012-12-04 Federico Bernardin <federico@bernardin.it>
    * update some todos

2012-11-30 Federico Bernardin <federico@bernardin.it>
    * fixed bug #43310 usergroup passed by pivars mustn't be overrided by pre or post usergroups
    * insert todo for regular expression

2012-11-27 Federico Bernardin <federico@bernardin.it>
    * changed method to fetch template content, now it's callable from test
